--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,10 +3,7 @@ trigger:
 
 pool:
   name: Default
-  demands:
-  - agent.name -equals mydockeragent
-  demands:
-  - npm
+  demands: ['agent.name -equals mydockeragent', 'npm']
 
 variables:
   buildConfiguration: 'Release'
