--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ parameters:
 - name: Default
   displayName: Pool Image
   type: string
-  default: mydockeragent
+  default: ['agent.name -equals mydockeragent', 'npm']
 
 trigger:
 - '*'
