--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,22 +1,15 @@
-parameters:
-- name: Default
-  displayName: Pool Image
-  default: ['agent.name -equals mydockeragent', 'npm']
-
 trigger:
 - '*'
 
 pool:
-  name: ${{parameters.name}}
-  demands: ${{parameters.default}}
-variables:
-  buildConfiguration: 'Release'
+  name: Default
+  demands:
+  - npm
 
 steps:
 - task: UseDotNet@2
   displayName: 'Use .NET SDK 5.x'
   inputs:
-    packageType: sdk
     version: '5.x'
 
 - task: Npm@1
@@ -46,3 +39,16 @@ steps:
     command: 'build'
     arguments: '--no-restore --configuration Release'
     projects: '**/*.csproj'
+
+- task: DotNetCoreCLI@2
+  displayName: 'Publish the project - Release'
+  inputs:
+    command: 'publish'
+    projects: '**/*.csproj'
+    publishWebProjects: false
+    arguments: '--no-build --configuration Release --output $(Build.ArtifactStagingDirectory)/Release'
+    zipAfterPublish: true
+
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifact: drop'
+  condition: succeeded()
